# HiveRunr

./: .coverage  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  OPERATIONS.md  README.md  alembic.ini  bootstrap.sh  docker-compose.ha.yml  docker-compose.prod.yml  docker-compose.review.env  docker-compose.yml  install.sh  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci.yml
app/: auth.py  crypto.py  deps.py  email.py  main.py  observability.py  scheduler.py  seeds.py  telemetry.py  worker.py
app/core/: db.py  executor.py  secrets.py  smtp.py  wait.py
app/nodes/: __init__.py  _utils.py  action_aggregate.py  action_airtable.py  action_call_graph.py  action_condition.py  action_csv.py  action_date.py  action_delay.py  action_discord.py  action_filter.py  action_github.py  action_google_sheets.py  action_graphql.py  action_http_request.py  action_hubspot.py  action_jira.py  action_linear.py  action_llm_call.py  action_log.py  action_loop.py  action_merge.py  action_mongodb.py  action_mysql.py  action_notion.py  action_openai_assistant.py  action_pdf.py  action_postgres.py  (+19 more)
frontend/: admin.html  canvas.html  invite.html  login.html  package-lock.json  package.json  reset.html  signup.html  vite.config.js
migrations/: env.py
scripts/: vm-push.sh
tests/: conftest.py  test_api_smoke.py  test_crypto.py  test_executor.py  test_executor_failures.py  test_nodes.py  test_permissions.py  test_run_decoding.py  test_run_script.py  test_secrets.py  test_utils.py  test_webhook_ratelimit.py  test_workspace_scoping.py
(+110 files in other folders)
